feat: projects repositories and controllers
