# backend/src/modules/projects/dtos/ICreateOrUpdateProjectDTO.ts
@@ -1,0 +1,8 @@
+export default interface ICreateOrUpdateProjectDTO {
+  name: string;
+  occupation_area?: string;
+  classroom?: string;
+  members?: string;
+  observation?: string;
+  image?: string;
+}
