# backend/src/modules/projects/infra/typeorm/entities/Project.ts
@@ -1,0 +1,59 @@
+import {
+  Entity,
+  Column,
+  CreateDateColumn,
+  UpdateDateColumn,
+  PrimaryColumn,
+} from 'typeorm';
+
+import uploadConfig from '@config/upload';
+
+import { Expose } from 'class-transformer';
+
+@Entity('projects')
+class Project {
+  @PrimaryColumn()
+  id: string;
+
+  @Column()
+  name: string;
+
+  @Column()
+  occupation_area?: string;
+
+  @Column()
+  classroom?: string;
+
+  @Column()
+  members?: string;
+
+  @Column()
+  observation?: string;
+
+  @Column()
+  image: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  @UpdateDateColumn()
+  updated_at: Date;
+
+  @Expose({ name: 'image_url' })
+  getImageUrl(): string | null {
+    if (!this.image) {
+      return null;
+    }
+
+    switch (uploadConfig.driver) {
+      case 'disk':
+        return `${process.env.APP_API_URL}/files/${this.image}`;
+      case 's3':
+        return `https://${uploadConfig.config.aws.bucket}.s3.us-east-2.amazonaws.com/${this.avatar}`;
+      default:
+        return null;
+    }
+  }
+}
+
+export default Project;
